<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="passListLabel">Password List</string>
    <string name="app_name">Passgori</string>
    <string name="passwordTitle">Password Title</string>
    <string name="usernameLabel">Username</string>
    <string name="usernameDefault">My Username</string>
    <string name="passwordLabel">Password</string>
    <string name="passwordDefault">My Password</string>
    <string name="notesLabel">Notes</string>
    <string name="notesDefault">My Notes</string>
    <string name="saveButtonLabel">Save</string>
    <string name="saveAndUnlockButtonLabel">Save and Unlock</string>
    <string name="createButtonLabel">Create</string>
    <string name="cancelButtonLabel">Cancel</string>
    <string name="appDescription">Safely store your passwords in the cloud</string>
    <string name="loadingListLabel">Loading Available Passwords…</string>
    <string name="refresh">Refresh</string>
    <string name="refreshing">Refreshing…</string>
    <string name="add">Add</string>
    <string name="configurePassgori">Configure Passgori</string>
    <string name="serviceBindError">Failed to Bind to Internal Service</string>
    <string name="noPasswordsError">No Passwords</string>
    <string name="editPassword">Edit Password</string>
    <string name="deletePassword">Delete Password</string>
    <string name="configuration">Configuration</string>
    <string name="serverLabel">Server</string>
    <string name="portLabel">Port</string>
    <string name="serverPrefixLabel">Server Prefix</string>
    <string name="unlockPassgori">Unlock Passgori</string>
    <string name="unlockLabel">Unlock Password Store</string>
    <string name="history">History</string>
    <string name="date">Date: </string>
    <string name="backup">Backup</string>
    <string name="backupRestore">Backup / Restore</string>
    <string name="backupTo">Backup destination </string>
    <string name="connectingPasswordStore">Connecting to password store</string>
    <string name="restore">Restore</string>
    <string name="useRemoteStorage">Use remote storage?</string>
    <string name="editServerDetails">Edit server details</string>
    <string name="welcome">Welcome to Passgori</string>
    <string name="newUser">New User</string>
    <string name="haveRemote">I have a remote store</string>
    <string name="haveBackup">I have a backup</string>

</resources>