<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configurations"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usernameLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/passgoriUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serverLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/passgoriServer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/portLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/passgoriPort"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number" >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serverPrefixLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/passgoriServerPrefix"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" >
    </EditText>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/saveButton"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:text="@string/saveButtonLabel" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:text="@string/cancelButtonLabel" />
    </LinearLayout>

</LinearLayout>