<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/passwordTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/passwordTitle"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/passwordTitleEdit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:inputType="text" >

                <requestFocus />
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usernameLabel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/usernameEdit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:inputType="text" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwordLabel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/passwordEdit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:inputType="textVisiblePassword" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notesLabel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/notesEdit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textImeMultiLine" >
            </EditText>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="150dip"
                    android:layout_height="wrap_content"
                    android:text="@string/saveButtonLabel" />

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="150dip"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelButtonLabel" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>