<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passgoriLogin"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usernameLabel"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/loginUsernameEditView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/passgoriPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/unlockButton"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:text="@string/unlockLabel" />

    <Button
        android:id="@+id/configureButton"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:text="@string/configurePassgori" />

    <TextView
        android:id="@+id/loginerror"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>