<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/backupLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/backupTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backupTo"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/backupDestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordLabel"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/backupButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/backup" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/restoreLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/restoreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ListView
            android:id="@+id/restoreList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

</LinearLayout>